compiler/fir/analysis-tests/testData/resolve/diagnostics/leakingThis/classMembersOnly/negative/propertyInitByFunction1.kt
// PROBLEM: none

class A1N {
    private val p2 = "p2"
    private val p1 = initP1()

    private fun initP1(): Int {
        return p2.length // OK
    }

}
